--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,33 +1,37 @@
-<div class="navbar-wrapper" style="margin-top: 20px;">
-    <nav class="navbar  navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
-                    <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
-                </button>
-                <!--a class="navbar-brand" href="#"><img style="width: 62px;" src="img/logoEnplater.png"></img></a--> 
+<div class="navbar-wrapper">
+    <div class="container">
+        <nav class="navbar  navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
+                        <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
+                    </button>
+                    <!--a class="navbar-brand" href="#"><img style="width: 62px;" src="img/logoEnplater.png"></img></a--> 
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav" >
+                        <li ng-repeat="menuItem in menus"><a ui-sref="app.{{language}}.{{menuItem.link}}" href="">{{menuItem.label}}</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                          <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown"> <img src="img/{{language}}.png" alt=""> {{translates.language[language]}} <span class="caret"></span></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a ng-click="changeLanguage('ca')">{{translates.languages[language].ca}}</a></li>  
+                            <li><a ng-click="changeLanguage('es')">{{translates.languages[language].es}}</a></li>
+                            <li><a ng-click="changeLanguage('en')">{{translates.languages[language].en}}</a></li>
+                            <li><a ng-click="changeLanguage('fr')">{{translates.languages[language].fr}}</a></li>
+                          </ul>
+                        </li>
+        
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+        
+        
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav" >
-                    <li ng-repeat="menuItem in menus"><a ui-sref="app.{{language}}.{{menuItem.link}}" href="">{{menuItem.label}}</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                      <a class="dropdown-toggle" role="button" aria-expanded="false" href="#" data-toggle="dropdown"> <img src="img/{{language}}.png" alt=""> {{translates.language[language]}} <span class="caret"></span></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a ng-click="changeLanguage('ca')">{{translates.languages[language].ca}}</a></li>  
-                        <li><a ng-click="changeLanguage('es')">{{translates.languages[language].es}}</a></li>
-                        <li><a ng-click="changeLanguage('en')">{{translates.languages[language].en}}</a></li>
-                        <li><a ng-click="changeLanguage('fr')">{{translates.languages[language].fr}}</a></li>
-                      </ul>
-                    </li>
+        </nav>
+        
+    </div>
     
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-    
-    
-        </div>
-    </nav>
 </div>
 
