Changed modern-busines.css body.padding-top to 0px

--- a/assets/css/modern-busines.css
+++ b/assets/css/modern-busines.css
@@ -12,7 +12,8 @@ body {
 }
 
 body {
-    padding-top: 40px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 0px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /* Changed from 40px to 0 */
 }
 
 .img-portfolio {
