--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,6 +1,6 @@
 <div class="navbar-wrapper">
     <div class="container">
-        <nav class="navbar  navbar-inverse navbar-fixed-top">
+        <nav class="navbar  navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
