--- a/templates/template-home.html
+++ b/templates/template-home.html
@@ -1,54 +1,119 @@
-<header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="fill" style="background-image:url('img/home/foto-1.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Patata</h2>
+    <header id="myCarousel" class="carousel slide">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+    
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="fill" style="background-image:url('img/home/foto-1.jpg');"></div>
+                    <div class="carousel-caption">
+                        <h2>Patata</h2>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="fill" style="background-image:url('img/home/foto-2.jpg');"></div>
+                    <div class="carousel-caption">
+                        <h2>Patata</h2>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="fill" style="background-image:url('img/home/foto-4.jpg');"></div>
+                    <div class="carousel-caption">
+                        <h2>Patata</h2>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="fill" style="background-image:url('img/home/foto-5.jpg');"></div>
+                    <div class="carousel-caption">
+                        <h2>Patata</h2>
+                    </div>
                 </div>
             </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/home/foto-2.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Patata</h2>
-                </div>
+    
+            <!-- Controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="icon-prev"></span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="icon-next"></span>
+            </a>
+        </header>
+    
+    <div class="container">
+        <div class="starter-template">
+                <h1>Enplater. Envases Plásticos del Ter</h1>
+                <p class="lead">Enplater se dedica a la impresión de embalaje flexible con todos los procesos integrados en todo tipo de soportes: como OPP, PE, PET, PA, Papel y BOPP</p>
+            
+        </div>
+        <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/home/foto-4.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Patata</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/home/foto-5.jpg');"></div>
-                <div class="carousel-caption">
-                    <h2>Patata</h2>
-                </div>
+            <div class="col-md-5">
+              <img class="featurette-image img-responsive center-block" data-src="" alt="">
             </div>
         </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
-    </header>
-
-<div class="starter-template">
-            <h1>Enplater. Envases Plásticos del Ter</h1>
-            <p class="lead">Enplater se dedica a la impresión de embalaje flexible con todos los procesos integrados en todo tipo de soportes: como OPP, PE, PET, PA, Papel y BOPP</p>
-        
-</div>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7 col-md-push-5">
+              <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+              <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="">
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+              <img class="featurette-image img-responsive center-block" data-src="" alt="">
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7 col-md-push-5">
+              <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+              <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="">
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5">
+              <img class="featurette-image img-responsive center-block" data-src="" alt="">
+            </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7 col-md-push-5">
+              <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="col-md-5 col-md-pull-7">
+              <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="">
+            </div>
+        </div>
+        <hr class="featurette-divider">
+          
+    </div>
+    
 
 <footer class="navbar navbar-default navbar-fixed-bottom">
     
@@ -56,27 +121,30 @@
     <div class="row">
         
         <div class="col-md-2 col-md-offset-3">
-            <a>© Copyright - Enplater</a>
+            <p>© Copyright - Enplater<p>
         </div>
         <div class="col-md-2">
             
         </div>
         <div class="col-md-4">
-            <a class="btn btn-social-icon">
-                <i class="fa fa-twitter"></i>
-            </a>
-            <a class="btn btn-social-icon ">
-                <i class="fa fa-facebook"></i>
-            </a>
-            <a class="btn btn-social-icon ">
-                <i class="fa fa-youtube"></i>
-            </a>
-            <a class="btn btn-social-icon ">
-                <i class="fa fa-google-plus"></i>
-            </a>
-            <a class="btn btn-social-icon ">
-                <i class="fa fa-linkedin"></i>
-            </a>
+            <p>
+                <span class="btn btn-social-icon">
+                    <i class="fa fa-twitter"></i>
+                </span>
+                <span class="btn btn-social-icon ">
+                    <i class="fa fa-facebook"></i>
+                </span>
+                <span class="btn btn-social-icon ">
+                    <i class="fa fa-youtube"></i>
+                </span>
+                <span class="btn btn-social-icon ">
+                    <i class="fa fa-google-plus"></i>
+                </span>
+                <span class="btn btn-social-icon ">
+                    <i class="fa fa-linkedin"></i>
+                </span>
+            </p>
+                
         </div>
     </div>
 </footer>
