--- a/templates/template-normal.html
+++ b/templates/template-normal.html
@@ -1,26 +1,24 @@
-<div class="container">
-    <div class="starter-template">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-5">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        {{content}}
-                    </div>
-                </div>
+<div style="padding-top: 60px">
+    <hr>
+    <div class="container">
+        <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">Algun Títol <span class="text-muted">continuem amb el títol.</span></h2>
+              <p class="lead">{{content}}</p>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-6">
-                <div  ng-if="type == 'video'"class="embed-responsive embed-responsive-16by9">
+            <div class="col-md-5">
+                
+              
+                <div  ng-if="type == 'video'"class="featurette-heading featurette-image embed-responsive embed-responsive-16by9">
                     <youtube-video video-id="video"></youtube-video>
                 </div>
                 <div ng-if="type == 'image'">
-                    <img class="img-responsive img-thumbnail" src="/img/{{value}}"></img>
+                    <img class="featurette-heading featurette-image img-responsive center-block" src="/img/{{value}}"></img>
                 </div>
             </div>
         </div>
-        
-                
-                
     </div>
+
 </div>
 
 <footer class="navbar navbar-default navbar-fixed-bottom">
