--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -28,6 +28,7 @@ body {
 .navbar-wrapper .navbar {
   padding-right: 15px;
   padding-left: 15px;
+  opacity: 0.8;
 }
 .navbar-wrapper .navbar .container {
   width: auto;
