--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,6 +1,6 @@
 <div class="navbar-wrapper">
     <div class="container">
-        <nav class="navbar  navbar-inverse">
+        <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
@@ -26,8 +26,6 @@
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
-        
-        
             </div>
         </nav>
         
