Added menu options Fabrication and Quality in state.cfg.js

--- a/templates/template-home.html
+++ b/templates/template-home.html
@@ -46,9 +46,12 @@
         </header>
     
     <div class="container">
-        <div class="starter-template">
-                <h1>Enplater. Envases Plásticos del Ter</h1>
+        <div class="row featurette">
+            <div class="col-xs-12">
+                <h1 class="featurette-heading">Enplater. Envases Plásticos del Ter</h1>
                 <p class="lead">Enplater se dedica a la impresión de embalaje flexible con todos los procesos integrados en todo tipo de soportes: como OPP, PE, PET, PA, Papel y BOPP</p>
+            </div>
+                
             
         </div>
         <div class="row featurette">
