--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper">
+<div class="{{menuClass}}">
     <div class="container">
         <nav class="navbar navbar-default">
             <div class="container">
