added change menu class 2

--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,4 +1,4 @@
-<div class="{{menuClass}}">
+<div class="{{menuClass}}" style="transition: margin-top 0.5s;">
     <div class="container">
         <nav class="navbar navbar-default">
             <div class="container">
