added change menu class 3

--- a/templates/template-normal.html
+++ b/templates/template-normal.html
@@ -1,6 +1,6 @@
 <div style="padding-top: 60px">
-    <hr>
-    <div class="container">
+    
+    <div id="menuContainer" class="container">
         <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">Algun Títol <span class="text-muted">continuem amb el títol.</span></h2>
