Added directive carousel and efects jquery.transit.min.js

--- a/templates/template-home.html
+++ b/templates/template-home.html
@@ -1,49 +1,5 @@
 
-    <header id="myCarousel" class="carousel slide">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-    
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <div class="fill" style="background-image:url('img/home/foto-1.jpg');"></div>
-                    <div class="carousel-caption">
-                        <h2>Patata</h2>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="fill" style="background-image:url('img/home/foto-2.jpg');"></div>
-                    <div class="carousel-caption">
-                        <h2>Patata</h2>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="fill" style="background-image:url('img/home/foto-4.jpg');"></div>
-                    <div class="carousel-caption">
-                        <h2>Patata</h2>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="fill" style="background-image:url('img/home/foto-5.jpg');"></div>
-                    <div class="carousel-caption">
-                        <h2>Patata</h2>
-                    </div>
-                </div>
-            </div>
-    
-            <!-- Controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="icon-prev"></span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="icon-next"></span>
-            </a>
-        </header>
+    <carousel></carousel>
     
     <div class="container">
         <div class="row featurette">
@@ -151,9 +107,3 @@
         </div>
     </div>
 </footer>
-
-<script>
-    $('.carousel').carousel({
-  interval: 2000
-});
-</script>
