--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -6,6 +6,10 @@ body {
   text-align: center;
 }
 
+.carousel h2 {
+  position : relative;
+}
+
 
 /* .embed-* is from bootstrap, for responsive videos */
 .embed-responsive {
