--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,4 +1,4 @@
-<div class="{{menuClass}}" style="transition: margin-top 0.5s, background-color 0.5s">
+<div class="{{menuClass}}" style="transition: margin-top 0.5s, background-color 0.5s, width 1s">
     <div id="menuContainer" class="container">
         <nav class="navbar navbar-default">
             <div class="container">
