--- a/templates/template-home.html
+++ b/templates/template-home.html
@@ -1,5 +1,5 @@
 
-    <carousel></carousel>
+    <carousel content="content.carousel"></carousel>
     
     <div class="container">
         <div class="row featurette">
