--- a/templates/menu-template.html
+++ b/templates/menu-template.html
@@ -1,6 +1,6 @@
 <div class="{{menuClass}}" style="transition: margin-top 0.5s, background-color 0.5s, width 1s">
     <div id="menuContainer" class="container">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default" style="transition: margin-top 0.5s, background-color 0.5s, width 1s">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> 
