--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -10,6 +10,9 @@ body {
   position : relative;
 }
 
+.social:hover {
+  color:#ec1111;
+}
 
 /* .embed-* is from bootstrap, for responsive videos */
 .embed-responsive {
