--- a/templates/footer-templater.html
+++ b/templates/footer-templater.html
@@ -3,13 +3,11 @@
     <br/>
     <div class="row">
         
-        <div class="col-md-2 col-md-offset-3">
+        <div class="col-md-6 visible-md-block visible-lg-block">
             <a href="/"><p class="text-center">{{social.text}}<p></a>
         </div>
-        <div class="col-md-2">
-            
-        </div>
-        <div class="col-md-4">
+        
+        <div class="col-md-6">
             <p class="text-center">
                 <a ng-repeat="s in social.icons"  href="{{s.url}}">
                     <span class="btn btn-social-icon social">
@@ -17,7 +15,11 @@
                     </span>
                 </a>
             </p>
-                
+        </div>
+    </div>
+    <div class="row visible-xs-block visible-sm-block">
+        <div class="col-xs-12">
+            <a href="/"><p class="text-center">{{social.text}}<p></a>
         </div>
     </div>
 </footer>
