Solved menu transition problem

--- a/templates/footer-templater.html
+++ b/templates/footer-templater.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row visible-xs-block visible-sm-block">
         <div class="col-xs-12">
-            <a href="/"><p class="text-center">{{social.text}}<p></a>
+            <a href=""><p class="text-center">{{social.text}}<p></a>
         </div>
     </div>
 </footer>
