--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -14,6 +14,11 @@ body {
   color:#ec1111;
 }
 
+.menu-top {
+  margin-top: 0 !important;
+  
+}
+
 /* .embed-* is from bootstrap, for responsive videos */
 .embed-responsive {
   position: relative;
